[gd_scene load_steps=3 format=3 uid="uid://iacy6x0kn8m7"]

[ext_resource type="Script" path="res://Scripts/killzone.gd" id="1_vhvvy"]
[ext_resource type="AudioStream" uid="uid://ccmuuywl6tbc5" path="res://sound/Game_over.mp3" id="2_it2v6"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_vhvvy")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1

[node name="Game_over" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_it2v6")
volume_db = 3.828
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
